--- a/report.Rmd
+++ b/report.Rmd
@@ -1,221 +1,321 @@
 
-# Ximad Curves
+# Curve fitting example
 
 ```{r, message=F}
 library(htmlTable)
-library(pixiedust)
 library(broom)
+library(pixiedust)
 library(dplyr)
+library(hash)
+library(data.table)
+options(scipen = 100000)
 ```
 
 ## Show data
 ```{r, results='asis',echo=T,message=FALSE, warning=FALSE}
 
 ## read data 
+df <- fread("./sample_data.csv")
 
-df <- read.csv("./sample_data.csv")
-
-## table of attributes
-meaning <- c("number of campaigns", "number of days", "Sum of revenue")
-features <- c("c1/c2/c3","days", "sum") 
+## attribute description simple table
+meaning <- c("number of campaign", "number of days", "Cumulative sum of campaigns revenue")
+features <- c("c1/c2/c3","days", "cumsum_revenue") 
 table.df = cbind(features, meaning)
 htmlTable(table.df)
 
-## showing  data
 
+## show data
 htmlTable(df)
+
+```
+
+## Curve fitting functions
+
+
+```{r}
+
+
+## timeseries for all curves
+times = seq(0, 60, 0.1)
+
+
+## CURVE FUNCTIONS 
+
+linear <- function(y) {
+
+    df$cumsum_revenue = y
+    lin.lm <- lm(cumsum_revenue ~ days, data = df)
+    pred.lin <- predict(lin.lm, list(days=times))
+    return(list(lin.lm, pred.lin))
+}
+
+
+logarithmic <- function (y) {
+    
+    df$cumsum_revenue = y
+    log.lm <- lm(cumsum_revenue ~ log(days), data = df)
+    pred.log <- predict(log.lm, list(days=times))
+    return(list(log.lm, pred.log))
+}
+
+
+exponential <- function (y) {
+    
+    df$cumsum_revenue = y
+    exp.lm <- lm(log(cumsum_revenue) ~ days, data = df)
+    pred.exp <- exp(predict(exp.lm, list(days=times)))
+    return(list(exp.lm, pred.exp))
+}
+
+
+polynomial_2 <- function (y) {
+
+    df$cumsum_revenue = y
+    poly2.lm <- lm(cumsum_revenue ~ poly(days, 2), data = df)
+    pred.poly2 <- predict(poly2.lm, list(days=times))
+    return(list(poly2.lm, pred.poly2))
+}
+
+
+polynomial_3 <- function (y) {
+
+    df$cumsum_revenue = y
+    poly3.lm <- lm(cumsum_revenue ~ poly(days, 3), data = df)
+    pred.poly3 <- predict(poly3.lm, list(days=times))
+    return(list(poly3.lm, pred.poly3))
+}
+
+
+models = list("linear" = linear, 
+              "logarithmic" = logarithmic,
+              "exponential" = exponential, 
+              "polynomial_2" = polynomial_2, 
+              "polynomial_3" = polynomial_3)
+
+
+```
+
+## Save curves plot into list
+
+```{r, fig.show='hide' }
+
+
+## create list for saving plots as object
+plots = list()
+
+## create list for assigning models name
+name.list = list()
+
+
+## loop every curve plot and save it as object into list
+
+for (i in seq(models)) {
+
+    # model name
+    name = names(models)[i]
+
+    # assign model name into list
+    name.list[[i]] = name
+
+    # function of model
+    fun.model = models[[name]]
+
+    # assign model coefficients and statistics 
+    mod.val = fun.model(df$cumsum_revenue) [[1]]
+
+    # assign prediction values
+    pred.val = fun.model(df$cumsum_revenue) [[2]]
+
+
+    # set the max ylim value
+    not.infinite = pred.val[!is.infinite(pred.val)]
+    ylim.max = max(not.infinite) + (max(not.infinite) + (-min(not.infinite)))/3
+
+    # set the min ylim value
+    not.infinite = pred.val[!is.infinite(pred.val)]
+    ylim.min = min(not.infinite)
+
+    # extrapolation plot
+    plot(times, pred.val, xaxt='n', type="l", main=paste(name, "curve"), 
+         ylab = "Cumulative campaign revenue", xlab="Number of days", 
+         cex.lab=1.5, cex.main=1.5, ylim=c(ylim.min, ylim.max),
+         xlim=c(0,60), col = '#FF00007F', lwd=4) 
+
+    # add grid
+    grid(NA, NULL)
+
+    # add points from original data
+    points(df$days, df$cumsum_revenue, col="#0000FF7F", pch = 16, cex = 1.8)
+
+    # modificate the plot axis
+    axis(1, at=seq(0,60,10), labels=seq(0,60,10))
+
+    # add legend to a plot
+    legend("topright", bty="n", 
+           legend=c(paste("Estimation by", name, "function"), "Campaign revenue", 
+           as.expression(bquote(
+           R^2==.(format(summary(mod.val)$r.squared, digits=3))))),
+           pch=c(NA,16),col=c("#FF00007F", "#0000FF7F"), 
+           lwd = 4, lty=c(1,0,0), cex = 1.2, pt.cex = 1.8, 
+           merge = T, inset=c(-0.1, 0), y.intersp=1.5)
+
+    # save every plot into list 'plots'
+    plots[[i]] = recordPlot()
+}   
+
+## assign model names into plots list
+names(plots) = unlist(name.list)
+
+
 
 ```
 
 ## Linear model
 
+```{r, fig.height = 6, fig.width=9}
 
-
-```{r}
-
-
-## model
-
-times = seq(0, 60, 0.1)
-lin.lm <- lm(sum ~ days, data = df)
-
-## plot 
-
-plot(df$days, df$sum, xaxt='n', pch=16, main="linear", ylab = "Sum of revenue", xlab="days", cex.lab=1.5, cex.main=1.5, xlim=c(0,60))
-abline(lin.lm, col="red", lwd=3)
-abline(v=length(df$days))
-axis(1, at=seq(0,60,5), labels=seq(0,60,5))
-legend("topright", bty="n", legend=paste("R2 is", format(summary(lin.lm)$r.squared,digits=4)), cex = 2.0)
-
-
-
-## table of statistics
-
-stats = round(glance(lin.lm), 3)
-htmlTable(stats)
-
-## table of coefficients
-
-coeff = as.data.frame(dust(lin.lm) %>% sprinkle(round = 3))
-htmlTable(coeff)
-
+plots[["linear"]]
 
 ```
-
 
 ## Logarithmic model
 
 
-```{r}
+```{r, fig.height = 6, fig.width=9}
 
-## model
-log.lm <- lm(sum ~ log(days), data = df)
-pred.log <- predict(log.lm, list(days=times))
-
-## plot
-plot(df$days, df$sum, xaxt='n', pch=16, main="logarithmic", ylab = "Sum of revenue", xlab="days",cex.lab=1.5, cex.main=1.5, xlim=c(0,60))
-abline(v=length(df$days))
-axis(1, at=seq(0,60,5), labels=seq(0,60,5))
-lines(times, pred.log, col = "red", lwd = 3)
-legend("topright", bty="n", legend=paste("R2 is", format(summary(log.lm)$r.squared,digits=4)), cex = 2.0)
+plots[["logarithmic"]]
 
 ```
 
 ## Exponential model
 
 
-```{r}
+```{r, fig.height = 6, fig.width=9}
 
-## model (power)
-exp.lm <- lm(log(sum) ~ days, data =df)
-pred.exp <- exp(predict(exp.lm, list(days=times)))
-
-## plot
-plot(df$days, df$sum, xaxt='n', pch=16, main="exponential", ylab = "Sum of revenue", xlab="days",cex.lab=1.5, cex.main=1.5, xlim=c(0,60))
-abline(v=length(df$days))
-axis(1, at=seq(0,60,5), labels=seq(0,60,5))
-lines(times, pred.exp, col="red", lwd=3)
-legend("topright", bty="n", legend=paste("R2 is", format(summary(exp.lm)$r.squared,digits=4)), cex  = 2.0)
-
+plots[["exponential"]]
 
 ```
 
 ## Polynomial (quadratic)
 
-```{r}
+```{r, fig.height = 6, fig.width=9}
 
-## model 2th degree
-poly2.lm <- lm(sum ~ poly(days, 2), data =df)
-pred.poly2 <- predict(poly2.lm, list(days=times))
-
-## plot
-plot(df$days, df$sum, xaxt='n', pch=16, main="polynomial - quadratic", ylab = "Sum of revenue", xlab="days",cex.lab=1.5, cex.main=1.5, xlim=c(0,60))
-abline(v=length(df$days))
-axis(1, at=seq(0,60,5), labels=seq(0,60,5))
-lines(times, pred.poly2, col="red", lwd=3)
-legend("topright", bty="n", legend=paste("R2 is", format(summary(poly2.lm)$r.squared,digits=4)), cex  = 2.0)
-
+plots[["polynomial_2"]]
 
 ```
 
 ## Polynomial (cubic)
 
+```{r, fig.height = 6, fig.width=9}
+
+plots[["polynomial_3"]]
+
+```
+
+```{r, echo=F, eval=F}
+
+## table of statistics
+stats = round(glance(lin.lm), 3)
+htmlTable(stats)
+
+
+## table of coefficients
+coeff = as.data.frame(dust(lin.lm) %>% sprinkle(round = 3))
+htmlTable(coeff)
+
+```
+
+## Create sorted R squared table
+
+```{r, results='asis',echo=T,warning=F}
+
+## lists for collecting stats with r.squared value
+model.stats = list()
+model.r.squared = list()
+
+
+## loop for creating table with r squared values and models name 
+
+for (i in seq(models)) {
+    fun.model = models[[ name.list[[i]] ]]
+    model.stats[[i]] = glance( fun.model(df$cumsum_revenue) [[1]] )        
+    model.r.squared[[i]]  = round(model.stats[[i]]$r.squared, 3)
+    results = data.table(cbind(Curve = unlist(name.list), 
+                            R.squared = unlist(model.r.squared)))
+}
+
+## sort results data.table by R.squared values
+r.squared.table = results[ order(-R.squared) ]
+
+## show r.squared.table 
+htmlTable(r.squared.table)
+
+kable(head(iris), format = "html")
+
+
+```
+
+## Fit campaigns to the best function
+
+
 ```{r}
 
-## model 3th degree
-poly3.lm <- lm(sum ~ poly(days, 3), data =df)
-pred.poly3 <- predict(poly3.lm, list(days=times))
-
-## plot
-plot(df$days, df$sum, xaxt='n', pch=16, main="polynomial - cubic", ylab = "Sum of revenue", xlab="days",cex.lab=1.5, cex.main=1.5, xlim=c(0,60))
-abline(v=length(df$days))
-axis(1, at=seq(0,60,5), labels=seq(0,60,5))
-lines(times, pred.poly3, col="red", lwd=3)
-legend("topright", bty="n", legend=paste("R2 is", format(summary(poly3.lm)$r.squared,digits=4)), cex  = 2.0)
-
-```
-
-## Extracting R squared and Coefficients from models
-
-```{r, results='asis',echo=T}
-
-
-mod.list = list(lin.lm, log.lm, exp.lm, poly2.lm, poly3.lm)
-mod.names = c("linear","logarithmic", "exponential","polynomial2", "polynomial3")
-result.list = list()
-
-for (i in seq(mod.list)) {
-    stats = round(glance(mod.list[[i]]), 3)
-    coeff = as.data.frame(dust(mod.list[[i]]) %>% sprinkle(round = 3))
-    R.squared = stats$r.squared
-    Intercept = coeff[1, 'estimate']
-    Beta = coeff[2:nrow(coeff), 'estimate']
-    Predictor = coeff[2:nrow(coeff), 'term']
-    model.values = cbind(model = mod.names[i], Predictor, Beta, Intercept, R.squared)
-    result.list[[i]] = model.values
-     }
-
-
-## collect all values  into table
-
-result.table = do.call(rbind, result.list)
-htmlTable(result.table)
-```
-## Best model
-
-```{r}
-
-
-result.df = data.frame(result.table)
-index.best = which.max(unique(result.df$R.squared))
-best.name = as.character(unique(result.df$model)[index.best])
-
-index.select = which(result.df$model %in% best.name)
-best = result.df[index.select, ]
-htmlTable(as.matrix(best))
-
-```
-
-
-```{r,echo=F,eval=F}
-## Final result at 60 days
-
-
-#Intercept = as.numeric(as.character(unique(best$Intercept)))
-#Beta = as.numeric(as.character(best$Beta))
+## best function index
+#best.index = which.max(results$R.squared)
 #
-#Max.Day = 60
+### select campaigns from data
+#campaigns = df[, grep("c[0-9]", names(df)), with = F]
 #
-#if (length(Beta) == 1) {
-#    forecast = Intercept + Beta[1]*Max.Day
-#}
+#models = 
 #
-#if (length(Beta) == 2) {
-#    forecast = Intercept + Beta[1]*Max.Day + Beta[2]*Max.Day
-#}
+#for (i in seq(campaigns)) {
 #
-#if (length(Beta) == 3) {
-#    forecast = Intercept + Beta[1]*Max.Day + Beta[2]*Max.Day + Beta[3]*Max.Day
-#}  
+#    # assign model coefficients and statistics 
+#    mod.val = models[[ names(models)[i] ]] [[1]]
 #
-#forecast
+#    # assign prediction values
+#    pred.val = models[[ names(models)[i] ]] [[2]]
+#
+#    # assign models name into list
+#    name = gsub(".\\.", "", names(models)[i])
+#    name.list[[i]] = name
+#
+#    # set the max ylim value
+#    not.infinite = pred.val[!is.infinite(pred.val)]
+#    ylim.max = max(not.infinite) + (max(not.infinite) + (-min(not.infinite)))/3
+#
+#    # set the min ylim value
+#    not.infinite = pred.val[!is.infinite(pred.val)]
+#    ylim.min = min(not.infinite)
+#
+#    # extrapolation plot
+#    plot(times, pred.val, xaxt='n', type="l", main=paste(name, "curve"), 
+#         ylab = "Cumulative campaign revenue", xlab="Number of days", 
+#         cex.lab=1.5, cex.main=1.5, ylim=c(ylim.min, ylim.max),
+#         xlim=c(0,60), col = '#FF00007F', lwd=4) 
+#
+#    # add grid
+#    grid(NA, NULL)
+#
+#    # add points from original data
+#    points(df$days, df$sum, col="#0000FF7F", pch = 16, cex = 1.8)
+#
+#    # modificate the plot axis
+#    axis(1, at=seq(0,60,10), labels=seq(0,60,10))
+#
+#    # add legend to a plot
+#    legend("topright", bty="n", 
+#           legend=c(paste("Estimation by", name, "function"), "Campaign revenue", 
+#           as.expression(bquote(
+#           R^2==.(format(summary(mod.val)$r.squared, digits=3))))),
+#           pch=c(NA,16),col=c("#FF00007F", "#0000FF7F"), 
+#           lwd = 4, lty=c(1,0,0), cex = 1.2, pt.cex = 1.8, 
+#           merge = T, inset=c(-0.1, 0), y.intersp=1.5)
+#
+#    # save every plot into list 'plots'
+#    plots[[i]] = recordPlot()
+#
+#}   
 
-
-
-```
-
-
-```{r, eval=F,echo=F}
-#poly2 = result.df[9:10, ]
-#Intercept = as.numeric(as.character(unique(poly2$Intercept)))
-#Beta = as.numeric(as.character(poly2$Beta))
-#forecast = Intercept + Beta[1]*Max.Day + Beta[2]*Max.Day
-#forecast
-
-#poly3 = result.df[11:13, ]
-#Intercept = as.numeric(as.character(unique(poly3$Intercept)))
-#Beta = as.numeric(as.character(poly3$Beta))
-#forecast = Intercept + Beta[1]*Max.Day + Beta[2]*Max.Day + Beta[3]*Max.Day
-#forecast
 ```
 
