--- a/report.Rmd
+++ b/report.Rmd
@@ -258,7 +258,7 @@ for (i in seq(models)) {
     fun.model = models[[ name.list[[i]] ]]
     model.stats[[i]] = glance( fun.model(df$cumsum_revenue) [[1]] )        
     model.r.squared[[i]]  = round(model.stats[[i]]$r.squared, 3)
-    results = data.table(cbind(Funtion = unlist(name.list), 
+    results = data.table(cbind(Function = unlist(name.list), 
                             R.squared = unlist(model.r.squared)))
 }
 
